WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148097
API::PageConfiguration's sessionID needs to be set whenever the API::WebsiteDataStore is set
https://bugs.webkit.org/show_bug.cgi?id=148097
Summary
API::PageConfiguration's sessionID needs to be set whenever the API::WebsiteD...
Sam Weinig
Reported
2015-08-17 14:42:09 PDT
API::PageConfiguration's sessionID needs to be set whenever the API::WebsiteDataStore is set
Attachments
Patch
(8.40 KB, patch)
2015-08-17 14:47 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2015-08-17 14:47:32 PDT
Created
attachment 259192
[details]
Patch
Sam Weinig
Comment 2
2015-08-17 14:50:27 PDT
Committed
r188543
: <
http://trac.webkit.org/changeset/188543
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug