Source/WebKit2/UIProcess/API/C/WKWebsiteDataStoreRef.cpp
@@ -33,3 +33,13 @@ WKTypeID WKWebsiteDataStoreGetTypeID()
 {
     return WebKit::toAPI(API::WebsiteDataStore::APIType);
 }
+
+WKWebsiteDataStoreRef WKWebsiteDataStoreGetDefaultDataStore()
+{
+    return WebKit::toAPI(API::WebsiteDataStore::defaultDataStore().get());
+}
+
+WKWebsiteDataStoreRef WKWebsiteDataStoreCreateNonPersistentDataStore()
+{
+    return WebKit::toAPI(&API::WebsiteDataStore::createNonPersistentDataStore().leakRef());
+}
