Source/WebKit2/UIProcess/API/C/WKWebsiteDataStoreRef.h
@@ -34,6 +34,9 @@ extern "C" {
 
 WK_EXPORT WKTypeID WKWebsiteDataStoreGetTypeID();
 
+WK_EXPORT WKWebsiteDataStoreRef WKWebsiteDataStoreGetDefaultDataStore();
+WK_EXPORT WKWebsiteDataStoreRef WKWebsiteDataStoreCreateNonPersistentDataStore();
+
 #ifdef __cplusplus
 }
 #endif
